--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,7 +40,7 @@
 </style>
 <div class="cent">
     <div class="container mt-3">
-            <%= render 'posts/new', locals: { post: Post.new }, post: @post%>
+            <%= render 'posts/new', locals: { post: Post.new }%>
     </div>
     <div class="container text-center">
     </div>
