--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,16 +2,16 @@
     <div class="modal-content rounded-4 shadow">
         <div class="modal-header p-5 pb-4 border-bottom-0">
         <!-- <h1 class="modal-title fs-5" >Modal title</h1> -->
-        <h1 class="fw-bold mb-0 fs-2 text-center">Add a comment</h1>
+        <h1 class="fw-bold mb-0 fs-2 text-center">Add Comment</h1>
         </div>
             <%= form_for([@post, @post.comments.build]) do |f| %>
         <div class="modal-body p-5 pt-0">
         <form class="">
             <div class="form-floating mb-3">
             <%= f.text_field :title, class: 'form-control'%> 
-            <label for="floatingInput">Email address</label>
+            <label for="floatingInput" style="opacity: 0.2;">Commenting as <%= current_user.email%></label>
             </div>
-            <%= f.submit  data: { turbo: "false" }, class: 'class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" btn btn-dark btn-sm mt-2'%>
+            <%= f.submit  data: { turbo: "false" }, class: ' rounded-3  btn btn-dark btn-sm '%>
         </form>
         <% end %>
         </div>
