--- a/app/views/posts/_alerts.html.erb
+++ b/app/views/posts/_alerts.html.erb
@@ -1,10 +1,25 @@
+<style>
+    .alert {
+        position: absolute;
+        right: 15px;
+        margin-top: 12px;
+    }
+</style>
 <% if flash[:notice]%>
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <%= flash[:notice]%>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% end %>
 <% if flash[:alert]%>
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <%= flash[:alert]%>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% end %>
+
+
+<script>
+    const alertList = document.querySelectorAll('.alert')
+    const alerts = [...alertList].map(element => new bootstrap.Alert(element))
+</script>
