Added Users Profile Page

--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -1,5 +1,5 @@
 <div class="my-4  border-bottom">
-    <h1 class="display-4 fw-bold text-center">New Post</h1>
+    <h1 class="display-4 fw-bold text-center">Add Post</h1>
     <%= form_with model: @post do |x|%>
         <div class="col-lg-6 mx-auto">
         <p class="lead mb-4"></p>
