--- a/app/views/notifications/_post.html.erb
+++ b/app/views/notifications/_post.html.erb
@@ -1,1 +1,5 @@
-<strong><%=notification.actor.email %></strong> has commented on Post <strong><%= notification.second_target.title%></strong>
+<% if notification.second_target.present? %>
+<strong><%=notification.actor.email %></strong> has commented on your post <strong><%= notification.second_target.title%></strong>. 
+<% else %>
+<strong><%=notification.actor.email %></strong> has deleted the comment or the post has been deleted
+<% end %>
