Added footer & about page

--- a/app/views/peoples/index.html.erb
+++ b/app/views/peoples/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-3">
     <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <h6 class=" pb-2 mb-0">Our Users</h6>
+        <h6 class="text-center display-5 fw-bold pb-2 mb-0">Our Users</h6>
         <hr>
         <% @user.each do |x|%>
         <div class="d-flex text-muted pt-3">
