--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,11 @@
+<style>
+  .footer{
+    position: sticky;
+    bottom: 15px;
+    width:100%;
+    background-color: #212529;
+  }
+</style>
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,4 +22,9 @@
     <%= yield %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
+  <footer>
+    <div class="footer">
+      <%= render 'posts/footer' if current_page?(root_path) || current_page?(posts_path)%>
+    </div>
+  </footer>
 </html>
