--- a/app/views/notifications/notifications/index.html.erb
+++ b/app/views/notifications/notifications/index.html.erb
@@ -28,7 +28,7 @@
   </div>
 <% end  %>
 <div class="container">
-  <%= link_to 'back', :back, class: 'btn btn-sm btn-dark mt-2' %>
+  <%= link_to 'back',:back, class: 'btn btn-dark mt-2' %>
 </div>
 
 
