fixed index Page button

--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -5,7 +5,7 @@
   .footer{
     color: white;
   }
-  .btn{
+  .btns{
     color: white;
   }
   *{
@@ -16,9 +16,9 @@
 <footer id="mdb-footer" class="mt-5" style="background-color:#212529; ">
   <div class="container py-2">
       <div class="text-center">
-        <a href="/" class="btn btn- btn-lg"><i class="fas fa-home ms-2"></i></a>
-        <a href="/peoples" class="btn btn- btn-lg"><i class="fas fa-user ms-2"></i></a>
-      <a href="/about/page" class="btn btn- btn-lg"><i class="fas fa-info ms-2"></i></a>
+        <a href="/" class="btn  btns btn- btn-lg"><i class="fas fa-home ms-2"></i></a>
+        <a href="/peoples" class="btn  btns btn- btn-lg"><i class="fas fa-user ms-2"></i></a>
+      <a href="/about/page" class="btn btns  btn- btn-lg"><i class="fas fa-info ms-2"></i></a>
       </div>
   </div>
   <div class="text-center p-1" style="background-color: #212529;">© 2023
